# Faceless-Video-Generator

./: .gitignore  CLAUDE.md  README.md  start.bat  start.ps1
backend/: pytest.ini  query_settings.py  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: ai_news.py  content.py  images.py  jobs.py  logs.py  metadata.py  narrator.py  pipeline.py  projects.py  queue.py  router.py  services.py  settings.py  shorts.py  subtitles.py  thumbnail.py  video.py  voice.py  wan2.py  ws.py
backend/app/core/: dependencies.py  events.py  exceptions.py  logging.py  progress.py
backend/app/models/: __init__.py  job.py  log.py  project.py  (+1 more)
backend/tests/: conftest.py  mock_services.py  test_api_projects.py  test_api_settings.py  test_image_service.py  test_metadata_service.py  test_mock_services.py  test_queue_api.py  test_resume_state.py  test_subtitle_service.py  test_validation_service.py  test_voice_service.py
config/: default.json
database/: schema.sql
docs/: README.md  developer_guide.md  local-setup.md  troubleshooting.md
docs/prompts/: 1. Trend Discovery Prompt.docx  2. Research + Fact Check.docx  3. Script Generation Prompt.docx  4. Scenes JSON Generator.docx  5. Image Prompt Generation.docx  6. Thumbnail Prompt Generator.docx  7. SEO Metadata Generator.docx  Faceless_Video_Generator.md  ~$ Trend Discovery Prompt.docx
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+97 files in other folders)
